--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,3 @@
-<!-- Ivasion 1897 -->
-<!-- Assasin's practice -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -106,7 +103,7 @@
     <br />
     <div class="text-light h6 text-center font-weight-bold w-100">LOCATE US ON THE MAP</div>
     <br />
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.7219619095335!2d7.941233014538696!3d4.643604396626797!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1067dd26cd07a521%3A0xd9b6717ed03a2f06!2sKodeHauz!5e0!3m2!1sen!2sng!4v1601311056973!5m2!1sen!2sng" frameborder="0" style="height: 358px;" allowfullscreen="" aria-hidden="false" tabindex="0" class="w-100 pr-1">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.7219619095335!2d7.941233014538696!3d4.643604396626797!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1067dd26cd07a521%3A0xd9b6717ed03a2f06!2sKodeHauz!5e0!3m2!1sen!2sng!4v1601311056973!5m2!1sen!2sng" frameborder="0" style="height: 358px;" allowfullscreen="" aria-hidden="false" tabindex="0" class="w-100 pr-1 rounded-lg"
       &nbsp;
     </iframe>
   </div>
