sorted our inconsistencies in commiting

--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="./css/aos.css"> -->
+    <link rel="stylesheet" href="./css/aos.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/e-tronics.css">
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <!-- <script src="./js/aos.js"></script> -->
     <link rel="shortcut icon" href="./img/favicon.png">
     <title>E-Tronics</title>
 </head>
@@ -103,7 +99,7 @@
     <br />
     <div class="text-light h6 text-center font-weight-bold w-100">LOCATE US ON THE MAP</div>
     <br />
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.7219619095335!2d7.941233014538696!3d4.643604396626797!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1067dd26cd07a521%3A0xd9b6717ed03a2f06!2sKodeHauz!5e0!3m2!1sen!2sng!4v1601311056973!5m2!1sen!2sng" frameborder="0" style="height: 358px;" allowfullscreen="" aria-hidden="false" tabindex="0" class="w-100 pr-1 rounded-lg"
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.7219619095335!2d7.941233014538696!3d4.643604396626797!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1067dd26cd07a521%3A0xd9b6717ed03a2f06!2sKodeHauz!5e0!3m2!1sen!2sng!4v1601311056973!5m2!1sen!2sng" frameborder="0" style="height: 358px;" allowfullscreen="" aria-hidden="false" tabindex="0" class="w-100 pr-1 rounded-lg">
       &nbsp;
     </iframe>
   </div>
@@ -121,7 +117,7 @@
     </div>
 
     <div class="col-12 col-md-6 col-lg-3 mb-5">
-      <span class="h4 font-weight-bold pb-2">Relate with us</span>
+      <span class="h4 font-weight-bold pb-2">Contact us</span>
       <ul class="p-0 m-0 pl-1" style="list-style-type: none;">
         <li> <i class="fa fa-phone"></i> <a class="text-light" href="tel:+2347063981133">+2347063981133</a></li>
         <li> <i class="fa fa-map-marker"></i> &nbsp; #38 Afaha Ukwa Road, Eket, Akwa Ibom, Nigeria</li>
@@ -163,3 +159,8 @@
 
   </div>
 </footer>
+<script src="./js/jquery.min.js"></script>
+<script src="./js/popper.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
+<script src="./js/aos.js"></script>
+<script src="./js/e-tronics.js"></script>
