--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="col-12 col-md-6 col-lg-3 mb-5">
-      <u class="h6">Relate with us</u>
+      <u class="h6">Contact us</u>
       <ul class="p-0 m-0 pl-1" style="list-style-type: none;">
         <li> <i class="fa fa-phone"></i> <a class="text-light" href="tel:+2347063981133">+2347063981133</a></li>
         <li> <i class="fa fa-map-marker"></i> &nbsp; #38 Afaha Ukwa Road, Eket, Akwa Ibom, Nigeria</li>
@@ -49,3 +49,8 @@
 
   </div>
 </footer>
+<script src="./js/jquery.min.js"></script>
+<script src="./js/popper.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
+<script src="./js/aos.js"></script>
+<script src="./js/e-tronics.js"></script>
