--- a/about.html
+++ b/about.html
@@ -1,6 +1,3 @@
-<!-- Ivasion 1897 -->
-<!-- Assasin's practice -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,14 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="./css/aos.css"> -->
+    <link rel="stylesheet" href="./css/aos.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/e-tronics.css">
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <!-- <script src="./js/aos.js"></script> -->
-    <script src="./js/e-tronics.js"></script>
     <link rel="shortcut icon" href="./img/favicon.png">
     <title>E-Tronics</title>
 </head>
@@ -198,7 +190,7 @@
     </div>
 
     <div class="col-12 col-md-6 col-lg-3 mb-5">
-      <span class="h4 font-weight-bold pb-2">Relate with us</span>
+      <span class="h4 font-weight-bold pb-2">Contact us</span>
       <ul class="p-0 m-0 pl-1" style="list-style-type: none;">
         <li> <i class="fa fa-phone"></i> <a class="text-light" href="tel:+2347063981133">+2347063981133</a></li>
         <li> <i class="fa fa-map-marker"></i> &nbsp; #38 Afaha Ukwa Road, Eket, Akwa Ibom, Nigeria</li>
@@ -240,3 +232,8 @@
 
   </div>
 </footer>
+<script src="./js/jquery.min.js"></script>
+<script src="./js/popper.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
+<script src="./js/aos.js"></script>
+<script src="./js/e-tronics.js"></script>
