--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!-- Ivasion 1897 -->
-<!-- Assasin's practice -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,13 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="./css/aos.css"> -->
+    <link rel="stylesheet" href="./css/aos.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/e-tronics.css">
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <!-- <script src="./js/aos.js"></script> -->
     <link rel="shortcut icon" href="./img/favicon.png">
     <title>E-Tronics</title>
 </head>
@@ -70,7 +63,7 @@
       
       <div class="carousel-item">
         <div class="bg-dark w-100 mw-100 d-flex align-items-center justify-content-center flex-column"
-          style="height: 500px; background-image: url(./img/E-TRONICS-2.jpg); background-size: cover; background-attachment: fixed; background-position: center">
+          style="height: 500px; background-image: url(./img/built-in.jpg); background-size: cover; background-attachment: fixed; background-position: center">
           <div style="background-color: #000000ad;"
             class="h-100 w-100 mw-100 d-flex align-items-center justify-content-center flex-column p-3">
 
@@ -361,7 +354,7 @@
         <div class="row space-between">
 
           <div class="col-12 col-md-4 col-lg-4  mt-4 bg-light" style="background: transparent !important;">
-              <div class="w-100 h-100 container shadow-lg border border-primary px-0 rounded-lg">
+              <div class="w-100 h-100 container shadow-lg border border-primary px-0 rounded-lg bg-light">
                   <img src="./img/bolt.png" class="w-100 border border-primary border-top-0 border-left-0 border-right-0">
                   <br /><br />
                   <div class="h4 font-weight-bold text-center polya text-primary">Load Estimation</div>
@@ -372,7 +365,7 @@
           </div>
   
           <div class="col-12 col-md-4 col-lg-4  mt-4 bg-light" style="background: transparent !important;">
-              <div class="w-100 h-100 container shadow-lg border border-primary px-0 rounded-lg">
+              <div class="w-100 h-100 container shadow-lg border border-primary px-0 rounded-lg bg-light">
                   <img src="./img/wrench.png" class="w-100 border border-primary border-top-0 border-left-0 border-right-0">
                   <br /><br />
                   <div class="h4 font-weight-bold text-center polya text-primary">DELIVERY & INSTALLATION</div>
@@ -383,7 +376,7 @@
           </div>
   
           <div class="col-12 col-md-4 col-lg-4  mt-4 bg-light" style="background: transparent !important;">
-              <div class="w-100 h-100 container shadow-lg border border-primary px-0 rounded-lg">
+              <div class="w-100 h-100 container shadow-lg border border-primary px-0 rounded-lg bg-light">
                   <img src="./img/users.png" class="w-100 border border-primary border-top-0 border-left-0 border-right-0">
                   <br /><br />
                   <div class="h4 font-weight-bold text-center polya text-primary">PREMIUM SERVICES & SUPPORT</div>
@@ -455,7 +448,7 @@
     </div>
 
     <div class="col-12 col-md-6 col-lg-3 mb-5">
-      <span class="h4 font-weight-bold pb-2">Relate with us</span>
+      <span class="h4 font-weight-bold pb-2">Contact us</span>
       <ul class="p-0 m-0 pl-1" style="list-style-type: none;">
         <li> <i class="fa fa-phone"></i> <a class="text-light" href="tel:+2347063981133">+2347063981133</a></li>
         <li> <i class="fa fa-map-marker"></i> &nbsp; #38 Afaha Ukwa Road, Eket, Akwa Ibom, Nigeria</li>
@@ -497,3 +490,8 @@
 
   </div>
 </footer>
+<script src="./js/jquery.min.js"></script>
+<script src="./js/popper.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
+<script src="./js/aos.js"></script>
+<script src="./js/e-tronics.js"></script>
