added google fonts

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/aos.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/e-tronics.css">
@@ -41,7 +42,7 @@
       <br />
 
       <p class="text-center">E-Tronics™ is a brand that specializes in producing and distributing renewable energy products and services of unbeatable quality. We believe in renewable energy solutions that will stand the test of time by providing you with a customized system that is best suitable for your needs.</p>
-      
+
       <p class="text-center">We are proud of our customer relationships focused on excellent customer services, and our willingness to assist with all your renewable energy requirements.</p>
 
       <p class="text-center">E-Tronics™ is owned and operated by certified Embedded systems Engineers with experience in the industry and this has given us the skill-set and technical know-how to deploy a full turnkey solution in the areas of our selected expertise.</p>
