fixed the footer

--- a/index.html
+++ b/index.html
@@ -484,9 +484,8 @@
       <hr class="bg-light border border-light w-100" />
     </div>
 
-    <div class="col-12 d-flex flex-row align-items-center justify-content-between">
-      <span class="h3 font-weight-bold"><span class="p-2 bg-light text-primary rounded">E</span>-Tronics</span>
-      <span> &copy; <script>document.write((new Date()).getFullYear())</script> </span>
+    <div class="col-12 text-center">
+      <span> Team E-tronics - &copy; </span><script>document.write((new Date()).getFullYear())</script> </span>
     </div>
 
   </div>
